Fixed: wflow-consoleweb - Universal Theme - Missing padding on right when there is a scrollbar.  @6.0-SNAPSHOT

--- a/wflow-consoleweb/src/main/webapp/universal/css/style.css
+++ b/wflow-consoleweb/src/main/webapp/universal/css/style.css
@@ -4,7 +4,9 @@
 
 html {
     overflow-x: hidden;
-    -ms-overflow-style: none
+    -ms-overflow-style: none;
+    overflow-y: auto;
+    height: 100%;
 }
 
 html.ismobile * {
@@ -14,7 +16,12 @@ html.ismobile * {
 body {
     font-size: 13px;
     line-height: 1.42857143;
+}
+
+body:not(.embeded) {
     width: 100vw;
+    overflow-y: auto;
+    height: 100%;
 }
 
 .inline-block {
